--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,8 @@ body {
   font-family: 'Rubik', sans-serif;
   padding: 0.5rem;
 }
-button {
+button,
+input {
   font-family: inherit;
 }
 
@@ -19,10 +20,6 @@ header {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-}
-
-header > h1 {
-  text-align: center;
 }
 
 header > h1 > a,
@@ -43,6 +40,41 @@ main {
   gap: 0.5rem;
 }
 
+.login-form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1rem;
+  padding-left: 3rem;
+}
+
+.input-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
+  width: 15rem;
+}
+
+.input-container > input {
+  font-size: inherit;
+  padding: 0.25rem;
+  width: 100%;
+}
+
+.input-container > label {
+  text-align: left;
+}
+
+.login-form > button {
+  font-size: inherit;
+  width: 15rem;
+  padding: 0.5rem;
+}
+
+.login-form > p {
+  text-align: center;
+}
+
 #addcar,
 #editcar {
   display: flex;
@@ -61,4 +93,14 @@ main {
 #addcar > button,
 #editcar > button {
   margin-top: 20px;
+}
+
+footer {
+  margin-top: 2rem;
+  padding-top: 0.5rem;
+  border-top: 1px solid #666666;
+  font-size: 0.825rem;
+}
+s {
+  color: #666666;
 }
