Possibilty to try full site locally w/ sample data

--- a/src/index.css
+++ b/src/index.css
@@ -88,8 +88,7 @@ main {
 #editcar {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
 #addcar > div,
